--- a/templates/home.html
+++ b/templates/home.html
@@ -3,28 +3,29 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="pragma" content="no-cache" />
-<meta http-equiv="cache-control" content="max-age=604800" />
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    {% comment %} <meta name="viewport" content="width=device-width, initial-scale=1.0"> {% endcomment %}
+    <meta http-equiv="cache-control" content="max-age=604800" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>SuperKart</title>
+    <title>SuperKart</title>
 
-{% comment %} jquery {% endcomment %}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    {% comment %} jquery {% endcomment %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-{% comment %} bootstrap {% endcomment %}
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+    {% comment %} bootstrap {% endcomment %}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
 
-{% comment %} font awesome {% endcomment %}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    {% comment %} font awesome {% endcomment %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-{% comment %} custom css {% endcomment %}
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
+    {% comment %} custom css {% endcomment %}
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
-{% comment %} custom js {% endcomment %}
-<script src="{% static 'js/script.js' %}" type="text/javascript"></script>
+    {% comment %} custom js {% endcomment %}
+    <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
 </head>
 <body>
@@ -58,7 +59,146 @@
 
         <section class="main-header">
             <div class = "container">
-                <div cclass="row align-items-center"
+                <div class="row align-items-center">
+                    <div class="col-lg-12 col-md-3 col-6">
+                        <a href="{% url 'home' %}" class="site-logo">
+                            <img class="logo" src="{% static 'img/logo.png' %}" alt="logo">
+                        </a>
+                    </div>
+                    <div class="col-6 col-lg col-sm col-md flex-grow-0">
+                        <div class="category dropdown d-inline-block float-right">
+                            <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              <i class="fa fa-bars"></i>  Categories
+                            </button>
+                            <div class="dropdown-menu">
+                              <a class="dropdown-item" href="#">Action</a>
+                              <a class="dropdown-item" href="#">Another action</a>
+                              <a class="dropdown-item" href="#">Something else here</a>
+                              <a class="dropdown-item" href="#">Action</a>
+                              <a class="dropdown-item" href="#">Another action</a>
+                              <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="#" class="btn btn-outline-dark"> Shop </a>
+                    <div class="col-lg col-md-6 col-sm-6 col">
+                        <form action="#" class="header-search-form">
+                            <div class="input-group w-100">
+                                <input type="text" class="form-control" placeholder="Search on SuperKart...." style="width:50%;">
+                                
+                                <div class="input-group-append">
+                                    <button class="btn btn-dark" type="submit">
+                                        <i class="fa fa-search"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
+                        <div class="d-flex justify-content-end mb-3 mb-lg-0">
+                            <div class="widget-header">
+                                <small class="title text-muted">Welcome to SuperKart!</small>
+                                <div> 
+                                    <a href="#" class="text-dark">Sign In</a>
+                                    <span class="dark mx-2">|</span>
+                                    <a href="#" class="text-dark">Create Account</a> 
+                                </div>
+                            </div>
+                            <a href="./cart" class="widget-header border-left pl-3 ml-3">
+                                    <div class="icon-wrap icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
+                                    <span class="badge badge-pill badge-danger notify">0</span>
+                            </a>
+                        </div> <!-- d-flex end -->
+                    </div> <!-- col end -->
+                </div> <!-- row end -->
+            </div> <!-- container end -->
+        </section> <!-- main header end -->
+    </header> <!-- header section end -->
+    
+    {% comment %} MAIN SECTION {% endcomment %}
+    <section class="main-section padding-y-sm">
+    <div class="container">
+        {% block content %}
+        {% endblock %}
+    <div class="main-banner-wrap">
+        <img src="{% static './images/banners/1.jpg' %}" alt="banner" class="img-fluid rounded">
+    </div>
+    </div>
+    </section>
+    {% comment %} MAIN SECTION END {% endcomment %}
+    
+    {% comment %} PRODUCT SECTION {% endcomment %}
+    <section class="section-name padding-y-sm bg">
+        <div class="container">
 
+            <header class="section-heading">
+                <a href="#" class="btn btn-outline-primary float-right">See all</a>
+                <h3 class="section-title">Popular products</h3>
+            </header>
 
-                   
+            <div class="row">
+                <div class="col-md-3">
+                    <div href="#" class="card card-product-grid">
+                        <a href="#" class="img-wrap"> <img src="{% static './images/items/1.jpg' %}"> </a>
+                        <figcaption class="info-wrap">
+                            <a href="#" class="title">Just another product name</a>
+                            <div class="price mt-1">$80.00</div> <!-- price-wrap.// -->
+                        </figcaption>
+                    </div>
+                </div> <!-- col.// -->
+                <div class="col-md-3">
+                    <div href="#" class="card card-product-grid">
+                        <a href="#" class="img-wrap"> <img src="{% static './images/items/2.jpg' %}"> </a>
+                        <figcaption class="info-wrap">
+                            <a href="#" class="title">Some item name here</a>
+                            <div class="price mt-1">$180.00</div> <!-- price-wrap.// -->
+                        </figcaption>
+                    </div>
+                </div> <!-- col.// -->
+                <div class="col-md-3">
+                    <div href="#" class="card card-product-grid">
+                        <a href="#" class="img-wrap"> <img src="{% static './images/items/3.jpg' %}"> </a>
+                        <figcaption class="info-wrap">
+                            <a href="#" class="title">Great product name here</a>
+                            <div class="price mt-1">$26.00</div> <!-- price-wrap.// -->
+                        </figcaption>
+                    </div>
+                </div> <!-- col.// -->
+                <div class="col-md-3">
+                    <div href="#" class="card card-product-grid">
+                        <a href="#" class="img-wrap"> <img src="{% static './images/items/4.jpg' %}"> </a>
+                        <figcaption class="info-wrap">
+                            <a href="#" class="title">Just another product name</a>
+                            <div class="price mt-1">$320.00</div> <!-- price-wrap.// -->
+                        </figcaption>
+                    </div>
+                </div> <!-- col.// -->
+            </div> <!-- row.// -->
+
+        </div><!-- container // -->
+    </section>
+    {% comment %} PRODUCT SECTION END {% endcomment %}
+    
+    {% comment %} FOOTER SECTION {% endcomment %}
+    <footer class="section-footer border-top padding-y">
+        <div class="container">
+            <section class="footer-bottom border-top row">
+                <div class="col-md-2">
+                    <p class="text-muted"> &copy 2023 Omar Al-mehdhar </p>
+                </div>
+                <div class="col-md-8 text-md-center">
+                    <span  class="px-2">omar@gmail.com</span>
+                    <span  class="px-2">1235324343</span>
+                    <span  class="px-2">business address</span>
+                </div>
+                <div class="col-md-2 text-md-right text-muted">
+                    <i class="fab fa-lg fa-cc-visa"></i>
+                    <i class="fab fa-lg fa-cc-stripe"></i>
+                    <i class="fab fa-lg fa-cc-mastercard"></i>
+                </div>
+            </section>
+        </div><!-- //container -->
+    </footer>
+    {% comment %} FOOTER SECTION END {% endcomment %}
+</body>
+</html>
