--- a/templates/home.html
+++ b/templates/home.html
@@ -1,124 +1,12 @@
+{% extends 'base.html' %}
 {% load static %}
 
-<!DOCTYPE HTML>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <title>SuperKart</title>
-
-    <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-
-    <!-- Bootstrap JS -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
-
-    <!-- Custom JS -->
-    <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
-</head>
-<body>
-    <header class="header-section">
-        <nav class="navbar navbar-expand-sm navbar-light border-bottom">
-            <div class="container">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop4" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarTop4">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item dropdown">
-                            <a href="#" class="nav-link">English</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a href="#" class="nav-link">USD</a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link"><i class="fa fa-envelope"></i> Email Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link"><i class="fa fa-phone"></i> Call Us</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-        <!-- Main Header -->
-        <section class="main-header">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-12 col-md-3 col-6">
-                        <a href="{% url 'home' %}" class="site-logo">
-                            <img class="logo" src="{% static 'img/logo.png' %}" alt="logo">
-                        </a>
-                    </div>
-                    <div class="col-6 col-lg col-sm col-md flex-grow-0">
-                        <div class="category dropdown d-inline-block float-right">
-                            <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fa fa-bars"></i>  Categories
-                            </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                        </div>
-                    </div>
-                    <a href="#" class="btn btn-outline-dark ml-auto">Shop</a>
-                    <div class="col-lg col-md-6 col-sm-6 col">
-                        <form action="#" class="header-search-form">
-                            <div class="input-group w-100">
-                                <input type="text" class="form-control" placeholder="Search on SuperKart...." style="width:50%;">
-                                
-                                <div class="input-group-append">
-                                    <button class="btn btn-dark" type="submit">
-                                        <i class="fa fa-search"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
-                        <div class="d-flex justify-content-end mb-3 mb-lg-0">
-                            <div class="widget-header">
-                                <small class="title text-muted">Welcome to SuperKart!</small>
-                                <div> 
-                                    <a href="#" class="text-dark">Sign In</a>
-                                    <span class="dark mx-2">|</span>
-                                    <a href="#" class="text-dark">Create Account</a> 
-                                </div>
-                            </div>
-                            <a href="./cart" class="widget-header border-left pl-3 ml-3">
-                                    <div class="icon-wrap icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
-                                    <span class="badge badge-pill badge-danger notify">0</span>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </header>
-
+{% block content %}
+    
     <!-- Main Section -->
     <section class="main-section padding-y-sm">
         <div class="container">
-            {% block content %}
-            {% endblock %}
+           
             <div class="main-banner-wrap">
                 <img src="{% static './images/banners/1.jpg' %}" alt="banner" class="img-fluid rounded">
             </div>
@@ -176,25 +64,8 @@
         </div><!-- container // -->
     </section>
 
-    <!-- Footer Section -->
-    <footer class="section-footer border-top padding-y">
-        <div class="container">
-            <section class="footer-bottom border-top row">
-                <div class="col-md-2">
-                    <p class="text-muted"> &copy 2023 Omar Al-mehdhar </p>
-                </div>
-                <div class="col-md-8 text-md-center">
-                    <span  class="px-2">omar@gmail.com</span>
-                    <span  class="px-2">1235324343</span>
-                    <span  class="px-2">business address</span>
-                </div>
-                <div class="col-md-2 text-md-right text-muted">
-                    <i class="fab fa-lg fa-cc-visa"></i>
-                    <i class="fab fa-lg fa-cc-stripe"></i>
-                    <i class="fab fa-lg fa-cc-mastercard"></i>
-                </div>
-            </section>
-        </div><!-- //container -->
-    </footer>
+    
 </body>
 </html>
+
+{% endblock %}
