--- a/templates/home.html
+++ b/templates/home.html
@@ -20,45 +20,22 @@
             <header class="section-heading">
                 <a href="#" class="btn btn-outline-primary float-right">See all</a>
                 <h3 class="section-title">Popular products</h3>
-            </header>
+            </header><!-- sect-heading -->
 
+
+           
             <div class="row">
+                {% for product in products %}
                 <div class="col-md-3">
                     <div href="#" class="card card-product-grid">
-                        <a href="#" class="img-wrap"> <img src="{% static './images/items/1.jpg' %}"> </a>
+                        <a href="#" class="img-wrap"> <img src="{{ product.image.url }}"> </a>
                         <figcaption class="info-wrap">
-                            <a href="#" class="title">Just another product name</a>
-                            <div class="price mt-1">$80.00</div>
+                            <a href="#" class="title">{{ product.product_name }}</a>
+                            <div class="price mt-1">${{ product.price }}</div>
                         </figcaption>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div href="#" class="card card-product-grid">
-                        <a href="#" class="img-wrap"> <img src="{% static './images/items/2.jpg' %}"> </a>
-                        <figcaption class="info-wrap">
-                            <a href="#" class="title">Some item name here</a>
-                            <div class="price mt-1">$180.00</div>
-                        </figcaption>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div href="#" class="card card-product-grid">
-                        <a href="#" class="img-wrap"> <img src="{% static './images/items/3.jpg' %}"> </a>
-                        <figcaption class="info-wrap">
-                            <a href="#" class="title">Great product name here</a>
-                            <div class="price mt-1">$26.00</div>
-                        </figcaption>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div href="#" class="card card-product-grid">
-                        <a href="#" class="img-wrap"> <img src="{% static './images/items/4.jpg' %}"> </a>
-                        <figcaption class="info-wrap">
-                            <a href="#" class="title">Just another product name</a>
-                            <div class="price mt-1">$320.00</div>
-                        </figcaption>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
 
         </div><!-- container // -->
