--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -42,11 +42,11 @@
                             <i class="fa fa-bars"></i>  Categories
                         </button>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="#">Sneakers</a>
+                            <a class="dropdown-item" href="#">Jackets</a>
+                            <a class="dropdown-item" href="#">Tracksuits</a>
+                            <a class="dropdown-item" href="#">Designer Bags</a>
+                            <a class="dropdown-item" href="#">Accessories</a>
                             <a class="dropdown-item" href="#">Something else here</a>
                         </div>
                     </div>
