--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="#" class="btn btn-outline-dark ml-auto">Shop</a>
+                <a href="{% url 'products' %}" class="btn btn-outline-dark ml-auto">Shop</a>
                 <div class="col-lg col-md-6 col-sm-6 col">
                     <form action="#" class="header-search-form">
                         <div class="input-group w-100">
