--- a/superkart/static/css/base.css
+++ b/superkart/static/css/base.css
@@ -1,3 +1,4 @@
+
 /* ================== HELPERS  =================== */
 a:hover {
     text-decoration: none;
@@ -23,4 +24,39 @@ a:hover {
   .content-body {
     flex: 1 1 auto;
     padding: 2rem 2.3rem;
+  }
+
+  /* Customer review */
+  .box {
+    padding: 18px;
+    background: #fff;
+    border-radius: 0.37rem;
+    border: 1px solid #e4e4e4;
+  }
+  .box img {
+    max-width: 100%;
+  }
+
+  .section-heading {
+    margin-bottom: 20px;
+    margin-top: 10px;
+  }
+
+  .gallery-wrap .img-big-wrap {
+    margin-bottom: 10px;
+  border-radius: 0.37rem;
+  overflow: hidden;
+  background-color: #fff;
+  }
+
+  .gallery-wrap .img-big-wrap img {
+    height: 450px;
+    width: auto;
+    display: inline-block;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .gallery-wrap .img-big-wrap a {
+    text-align: center;
+    display: block;
   }
