--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
         <div class="container">
 
             <header class="section-heading">
-                <a href="#" class="btn btn-outline-primary float-right">See all</a>
+                <a href="{% url 'products' %}" class="btn btn-outline-primary float-right">See all</a>
                 <h3 class="section-title">Popular products</h3>
             </header><!-- sect-heading -->
 
@@ -27,8 +27,8 @@
             <div class="row">
                 {% for product in products %}
                 <div class="col-md-3">
-                    <div href="#" class="card card-product-grid">
-                        <a href="#" class="img-wrap"> <img src="{{ product.image.url }}"> </a>
+                    <div class="card card-product-grid">
+                        <a href="{{ product.get_url }}" class="img-wrap"> <img src="{{ product.image.url }}"> </a>
                         <figcaption class="info-wrap">
                             <a href="#" class="title">{{ product.product_name }}</a>
                             <div class="price mt-1">${{ product.price }}</div>
