add product review section

--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -86,7 +86,7 @@
                     <img src="" alt="" class="float-left img-thumbnail">
                     <div class="text">
                         <span class="comment-date text-muted float-md-right">2014-01-01</span>
-                        <h6 class="mt-0">John Doe</h6>
+                        <h6 class="mt-0">jophn smosdj</h6>
 
                     </div>
                 </div>
