--- a/superkart/static/css/base.css
+++ b/superkart/static/css/base.css
@@ -60,3 +60,42 @@ a:hover {
     text-align: center;
     display: block;
   }
+
+  /* CART PAGE */
+  .cart-items{
+    position: relative;
+    display: flex;
+    width: 100%;
+  }
+
+  .cart-items .aside{
+    position: relative;
+    flex-shrink: 0;
+  }
+
+  .cart-items .info{
+    padding-right: 7px;
+    padding-left: 14px;
+  }
+
+  .cart-items .title {
+    display: block;
+    margin-bottom: 5px;
+    color: #212529;
+  }
+  .cart-items a.title:hover {
+    color: #3167eb;
+  }
+
+  .img-sm{
+    width: 80px;
+    height: 80px;
+    border-radius: 0.37rem;
+    overflow: hidden;
+    background-color: #fff;
+    -o-object-fit: cover;
+    object-fit: cover;
+    flex-shrink: 0;
+    flex-grow: 0;
+  }
+
