--- a/templates/products/cart.html
+++ b/templates/products/cart.html
@@ -18,12 +18,14 @@
                             </tr>
                         </thead>
                         <tbody>
+
+                            {% for cart_item in cart_items %}
                             <tr>
                                 <td>
-                                    <figure class="align-items-center">
-                                        <div class="aside"><img src="" class="img-sm"></div>
+                                    <figure class="cart-items align-items-center">
+                                        <div class="aside"><img src="{{ cart_item.product.image.url }}" class="img-sm"></div>
                                         <figcaption class="info">
-                                            <a href="#" class="title text-dark">name</a>
+                                            <a href="#" class="title text-dark">{{ cart_item.product.product_name }}</a>
                                             <p class="small text-muted">Size: XL, Color: blue</p>
                                         </figcaption>
                                     </figure>
@@ -34,7 +36,7 @@
                                             <div class="input-group-prepend">
                                             <button class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </button>
                                             </div>
-                                            <input type="text" class="form-control"  value="1">
+                                            <input type="text" class="form-control"  value=" {{ cart_item.quantity}} ">
                                             <div class="input-group-append">
                                             <button class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </button>
                                             </div>
@@ -43,14 +45,16 @@
                                 </td>
                                 <td>
                                     <div class="price-container">
-                                        <var class="price">price</var>
-                                        <small class="text-muted">price</small>
+                                        <var class="price">${{ cart_item.total }}</var><br>
+                                        <small class="text-muted">${{ cart_item.product.price }} per</small>
                                     </div>
                                 </td>
                                 <td class="text-right">
-                                    <a href="#" class="btn btn-outline-danger"> × Remove</a>
+                                    <a href="#" class="btn btn-outline-danger"><i class="fa-solid fa-trash-can"></i></a>
                                 </td>
                             </tr>
+                            {% endfor %}
+
                         </tbody>
                     </table>
                 </div>
@@ -88,7 +92,6 @@
 
 
                         
-
 
 {% endblock content %}
 ```
