fix cart sub_total function

--- a/templates/products/cart.html
+++ b/templates/products/cart.html
@@ -45,7 +45,7 @@
                                 </td>
                                 <td>
                                     <div class="price-container">
-                                        <var class="price">${{ cart_item.total }}</var><br>
+                                        <var class="price">${{ cart_item.sub_total }}</var><br>
                                         <small class="text-muted">${{ cart_item.product.price }} per</small>
                                     </div>
                                 </td>
