--- a/templates/products/cart.html
+++ b/templates/products/cart.html
@@ -38,7 +38,7 @@
                                             </div>
                                             <input type="text" class="form-control"  value=" {{ cart_item.quantity}} ">
                                             <div class="input-group-append">
-                                            <button class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </button>
+                                            <a href="{% url 'add_to_cart' cart_item.product.id %}" class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </a>
                                             </div>
                                         </div>
                                     </div>
