--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -63,7 +63,7 @@
                 {% if single_product.stock <= 0 %}
                     <h4 class="text-danger">Out of stock</h4>
                 {% else %}
-                <a href="#" class="btn btn-success"><i class="fa fa-shopping-cart"></i> Add to cart </a>
+                <a href="{% url 'add_to_cart' single_product.id %}" class="btn btn-success"><i class="fa fa-shopping-cart"></i> Add to cart </a>
                 {% endif %}
                 </article>
             </main>
