--- a/templates/products/cart.html
+++ b/templates/products/cart.html
@@ -36,7 +36,7 @@
                                     <figure class="cart-items align-items-center">
                                         <div class="aside"><img src="{{ cart_item.product.image.url }}" class="img-sm"></div>
                                         <figcaption class="info">
-                                            <a href="#" class="title text-dark">{{ cart_item.product.product_name }}</a>
+                                            <a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
                                             <p class="small text-muted">Size: XL, Color: blue</p>
                                         </figcaption>
                                     </figure>
@@ -93,7 +93,7 @@
                             <img src="" height="26">
                         </p>
                         <a href="#" class="btn btn-primary btn-block"> Checkout Securely </a>
-                        <a href="#" class="btn btn-light btn-block">Continue Shopping</a>
+                        <a href="{% url 'products' %}" class="btn btn-light btn-block">Continue Shopping</a>
                     </div>
                 </div>
             </aside>
