--- a/templates/products/product_detail.html
+++ b/templates/products/product_detail.html
@@ -16,56 +16,55 @@
             </aside>
 
             <main class="col-md-6 border-left">
-                <article class="content-body">
-                    <h2 class="title">{{ single_product.product_name }}</h2>
+                <form action="{% url 'add_to_cart' single_product.id %}" method="POST">
+                    {% csrf_token %}
+                    <article class="content-body">
+                        <h2 class="title">{{ single_product.product_name }}</h2>
 
-                <div class="mb-3"> 
-                    <var class="price h4">{{ single_product.price }}</var>
-                </div>
+                    <div class="mb-3"> 
+                        <var class="price h4"> ${{ single_product.price }}</var>
+                    </div>
 
-                <p>{{ single_product.description }}</p>
+                    <p>{{ single_product.description }}</p>
 
-                <hr>
-                <div class="row">
-                    <div class="item-option-select">
-                        <h6>Colour</h6>
-                        <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-                            <label class="btn btn-light">
-                                <input type="radio" name="radio_color" id="option1"> Blue
-                            </label>
-                            <label class="btn btn-light active">
-                                <input type="radio" name="radio_color checked" id="option2"> White
-                            </label>
-                            <label class="btn btn-light">
-                                <input type="radio" name="radio_color" id="option3"> Black
-                            </label>
+                    <hr>
+                    <div class="row">
+                        <div class="item-option-select">
+                            <h6>Colour</h6>
+                            <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
+
+                                {% for i in single_product.product_options_set.colour  %}
+                                    <label class="btn btn-light" required>
+                                        <input type="radio" name="colour" value="{{ i.option_value }}"> {{ i.option_value }}
+                                    </label>
+                                {% endfor %}
+                               
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="row">
-                    <div class="item-option-select">
-                        <h6>Size</h6>
-                        <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-                            <label class="btn btn-light">
-                                <input type="radio" name="radio_size" id="option1"> S
-                            </label>
-                            <label class="btn btn-light active">
-                                <input type="radio" name="radio_size checked" id="option2"> M
-                            </label>
-                            <label class="btn btn-light">
-                                <input type="radio" name="radio_size" id="option3"> L
-                            </label>
+                    <div class="row">
+                         <div class="item-option-select">
+                            <h6>Size</h6>
+                            <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
+                                
+                                {% for i in single_product.product_options_set.size %}        
+                                <label class="btn btn-light">
+                                    <input type="radio" name="size" value="{{ i.option_value }}"> {{ i.option_value }}
+                                </label>
+                                {% endfor %}
+                                
+                            </div> 
                         </div>
                     </div>
-                </div>
-                <hr>
-                {% if single_product.stock <= 0 %}
-                    <h4 class="text-danger">Out of stock</h4>
-                {% else %}
-                <a href="{% url 'add_to_cart' single_product.id %}" class="btn btn-success"><i class="fa fa-shopping-cart"></i> Add to cart </a>
-                {% endif %}
-                </article>
+                    <hr>
+                    {% if single_product.stock <= 0 %}
+                        <h4 class="text-danger">Out of stock</h4>
+                    {% else %}
+                    <button type="submit" class="btn btn-success"><i class="fa fa-shopping-cart"></i> Add to cart </button>
+                    {% endif %}
+                    </article>
+                </form>
             </main>
         </div>
     </div>
